fix(tabs): active tab to link-color for contrast.

--- a/src/content-handlers/iiif/modules/uv-contentleftpanel-module/css/styles.less
+++ b/src/content-handlers/iiif/modules/uv-contentleftpanel-module/css/styles.less
@@ -35,7 +35,7 @@
         &.on {
           border: 1px solid @panel-border-color;
           border-bottom: 1px solid @panel-dark-bg;
-          color: @brand-secondary;
+          color: @link-color;
           margin-bottom: -1px;
           height: 25px;
           line-height: 25px;
